# otus_cpp

./: .gitignore  CMakeLists.txt  README.md  mingw_build.cmd  msvs_build.cmd  version.h.in
.github/workflows/: cmake.yml  release.yml
bulk/: CMakeLists.txt  bulk.cpp
custom_tie/: CMakeLists.txt  custom_tie.cpp
hello/: CMakeLists.txt  hello.cpp
ip_filter/: CMakeLists.txt  ip_filter.cpp
